ops/kubernetes/overlays/production/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-depl
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: web
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
