ops/kubernetes/overlays/production/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: site.web.live
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: web-clusterip
            port: 
              number: 80
